# rs-clob-client

./: .gitignore
bot/: .env.example  CLAUDE.md  Cargo.toml  DEPLOY.md  config.toml
bot/src/: btc_trader.rs  config.rs  copy_tracker.rs  dashboard.rs  dashboard_html.rs  engine.rs  main.rs  market_state.rs  order_manager.rs  position.rs  redeemer.rs  risk.rs  wallet_scorer.rs
bot/src/strategy/: market_maker.rs  mod.rs
src/data/types/: response.rs
