[package]
name = "polymarket-bot"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[[bin]]
name = "polymarket-bot"
path = "src/main.rs"

[dependencies]
polymarket-client-sdk = { path = "..", features = [
    "clob",
    "gamma",
    "data",
    "ws",
    "tracing",
    "heartbeats",
] }

alloy = { version = "1.6.3", default-features = false, features = [
    "signer-local",
    "signers",
] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
dotenvy = "0.15"
futures = "0.3"
rust_decimal = { version = "1.40", features = ["serde"] }
rust_decimal_macros = "1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "signal", "net"] }
toml = "0.8"
axum = { version = "0.8", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.21", features = ["v4"] }
